<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="234dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/bg_anjian_top"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@mipmap/ic_anjian_yuan_da"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_anjian_top_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="80dp"
                android:background="@mipmap/ic_dengguang" />

            <TextView
                android:id="@+id/text_anjian_top_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="11dp"
                android:text="@string/dengguangshijian"
                android:textColor="@color/FA3008"
                android:textSize="@dimen/sp_14"></TextView>


        </LinearLayout>

    </RelativeLayout>
    
    <TextView
        android:id="@+id/tv_10fenzhong"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_anjian_chang_tuoyuan_selector"
        android:text="@string/tenfenzhong"
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/anjian_text_color_selector"
        />

    <TextView
        android:id="@+id/tv_8xiaoshi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_anjian_chang_tuoyuan_selector"
        android:text="@string/eightxiaoshi"
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/anjian_text_color_selector"
        />


    <TextView
        android:id="@+id/tv_10xiaoshi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_anjian_chang_tuoyuan_selector"
        android:text="@string/tentxiaoshi"
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/anjian_text_color_selector"
        />

</LinearLayout>