<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_background"
        android:gravity="center_vertical"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="QMS-MQ"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/click_to_connect"
            android:textColor="@color/text_orange"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/lv_connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/disconnect"
                android:textColor="@color/text_orange"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/connected"
                android:textColor="#F14C27"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
