<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/transparent"
android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_dialog_button_top">

        <RelativeLayout
            android:id="@+id/rl_chinese"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese"
                android:textSize="20sp"
                android:textColor="#0C0B0E"
                android:layout_centerInParent="true"
                />

            <ImageView
                android:id="@+id/img_selected_zh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/selected"
                android:layout_marginLeft="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="35dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="#A7A6A7" />


        <RelativeLayout
            android:id="@+id/rl_english"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="20sp"
                android:textColor="#0C0B0E"
                android:layout_centerInParent="true"
                />

            <ImageView
                android:id="@+id/img_selected_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/selected"
                android:layout_marginLeft="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="35dp"
                android:visibility="gone"/>

        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="16dp"
        android:textColor="#979DA7"
        android:textSize="20sp"
        android:text="@string/dialog_negetive"
        android:gravity="center"
        android:background="@drawable/bg_dialog_button_top"/>




</LinearLayout>